--- a/index.html
+++ b/index.html
@@ -12,10 +12,72 @@
   </head>
   <body>
     <div class="page">
+      <nav class="menubar">
+        <img src="./images/logo.svg" alt="Spot logo" class="menubar__logo" />
+      </nav>
       <header class="header">
-        <img src="./images/logo.svg" alt="Spot logo" class="header_logo" />
+        <img
+          src="./images/avatar.jpg"
+          alt="Bessie Coleman image"
+          class="header__avatar"
+        />
+        <div class="header__column">
+          <h1 class="header__name">Bessie Coleman</h1>
+          <p class="header__description">Civil Aviator</p>
+        </div>
       </header>
-      <main class="content"></main>
+      <main class="content">
+        
+          <div class="content__card">
+            <img
+              src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+              alt=""
+              class="content__card_image"
+            />
+            <p class="content__card_description">Val Thorens</p>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/2-photo-by-ceiline-from-pexels.jpg"
+              alt=""
+              class="content__card_image"
+            />
+            <p class="content__card_description">Restaurant terrace</p>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+              alt=""
+              class="content__card_image"
+            />
+            <p class="content__card_description">An outdoor cafe</p>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
+              alt=""
+              class="content__card_image"
+            />
+            <p class="content__card_description">A very long bridge, over the forest...</p>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+              alt=""
+              class="content__card_image"
+            />
+            <p class="content__card_description">Tunnel with morning light</p>
+          </div>
+          <div class="content__card">
+            <img
+              src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+              alt=""
+              class="content__card_image"
+            />
+            <p class="content__card_description">Mountain house</p>
+          </div>
+       
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
