--- a/index.html
+++ b/index.html
@@ -11,74 +11,107 @@
     <title>Spots</title>
   </head>
   <body>
+    <nav class="banner">
+      <img src="./images/logo.svg" alt="Spot logo" class="banner__logo" />
+    </nav>
+
     <div class="page">
-      <nav class="menubar">
-        <img src="./images/logo.svg" alt="Spot logo" class="menubar__logo" />
-      </nav>
-      <header class="header">
+      <header class="profile">
         <img
           src="./images/avatar.jpg"
           alt="Bessie Coleman image"
-          class="header__avatar"
+          class="profile__avatar"
         />
-        <div class="header__column">
-          <h1 class="header__name">Bessie Coleman</h1>
-          <p class="header__description">Civil Aviator</p>
+        <div class="profile__column">
+          <h1 class="profile__name">Bessie Coleman</h1>
+          <p class="profile__description">Civil Aviator</p>
+
+          <button type="button" class="profile__edit-btn">
+            <img src="./images/pencil.svg" alt="pencil icon" />Edit Profile
+          </button>
         </div>
+        <button type="button" class="profile__add-btn">
+          <img
+            src="./images/cross.svg"
+            class="profile__add-btn_cross"
+            alt="add button"
+          />New Post
+        </button>
       </header>
-      <main class="content">
-        
-          <div class="content__card">
+      <section class="cards">
+        <ul class="cards__list">
+          <li class="card">
             <img
               src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
               alt=""
-              class="content__card_image"
+              class="card_image"
             />
-            <p class="content__card_description">Val Thorens</p>
-          </div>
-          <div class="content__card">
+            <div class="card__content">
+              <p class="card__description">Val Thorens</p>
+              <button type="button" class="card__like-btn"></button>
+            </div>
+          </li>
+          <li class="card">
             <img
               src="./images/2-photo-by-ceiline-from-pexels.jpg"
               alt=""
-              class="content__card_image"
+              class="card_image"
             />
-            <p class="content__card_description">Restaurant terrace</p>
-          </div>
-          <div class="content__card">
+            <div class="card__content">
+              <p class="card__description">Restaurant terrace</p>
+              <button type="button" class="card__like-btn"></button>
+            </div>
+          </li>
+          <li class="card">
             <img
               src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
               alt=""
-              class="content__card_image"
+              class="card_image"
             />
-            <p class="content__card_description">An outdoor cafe</p>
-          </div>
-          <div class="content__card">
+            <div class="card__content">
+              <p class="card__description">An outdoor cafe</p>
+              <button type="button" class="card__like-btn"></button>
+            </div>
+          </li>
+          <li class="card">
             <img
               src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
               alt=""
-              class="content__card_image"
+              class="card_image"
             />
-            <p class="content__card_description">A very long bridge, over the forest...</p>
-          </div>
-          <div class="content__card">
+            <div class="card__content">
+              <p class="card__description">
+                A very long bridge, over the forest...
+              </p>
+
+              <button type="button" class="card__like-btn"></button>
+            </div>
+          </li>
+          <li class="card">
             <img
               src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
               alt=""
-              class="content__card_image"
+              class="card_image"
             />
-            <p class="content__card_description">Tunnel with morning light</p>
-          </div>
-          <div class="content__card">
+            <div class="card__content">
+              <p class="card__description">Tunnel with morning light</p>
+              <button type="button" class="card__like-btn"></button>
+            </div>
+          </li>
+          <li class="card">
             <img
               src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
               alt=""
-              class="content__card_image"
+              class="card_image"
             />
-            <p class="content__card_description">Mountain house</p>
-          </div>
-       
-      </main>
-      <footer class="footer"></footer>
+            <div class="card__content">
+              <p class="card__description">Mountain house</p>
+              <button type="button" class="card__like-btn"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <footer class="footer page__centering">f f vff fv</footer>
     </div>
   </body>
 </html>
