--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="profile__description">Civil Aviator</p>
 
           <button type="button" class="profile__edit-btn">
-            <img src="./images/pencil.svg" alt="pencil icon" />Edit Profile
+            <img src="./images/pencil.svg"  class="profile__edit-btn_icon" alt="pencil icon" />Edit Profile
           </button>
         </div>
         <button type="button" class="profile__add-btn">
@@ -111,7 +111,7 @@
           </li>
         </ul>
       </section>
-      <footer class="footer page__centering">f f vff fv</footer>
+      <footer class="footer page__centering"><h3 class="footer__text">2024 © Spots</h3></footer>
     </div>
   </body>
 </html>
