--- a/index.html
+++ b/index.html
@@ -11,78 +11,82 @@
     <title>Spots</title>
   </head>
   <body>
-    <nav class="banner">
-      <img src="./images/logo.svg" alt="Spot logo" class="banner__logo" />
-    </nav>
-
     <div class="page">
-      <header class="profile">
+      <header class="header">
+        <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
+      </header>
+
+      <section class="profile">
         <img
           src="./images/avatar.jpg"
           alt="Bessie Coleman image"
           class="profile__avatar"
         />
         <div class="profile__column">
-          <h1 class="profile__name">Bessie Coleman </h1>
+          <h1 class="profile__name">Bessie Coleman</h1>
           <p class="profile__description">Civil Aviator</p>
 
           <button type="button" class="profile__edit-btn">
-            <img src="./images/pencil.svg"  class="profile__edit-btn_icon" alt="pencil icon" />Edit Profile
+            <img
+              src="./images/pencil.svg"
+              class="profile__edit-btn-icon"
+              alt="pencil icon"
+            />Edit Profile
           </button>
         </div>
         <button type="button" class="profile__add-btn">
           <img
             src="./images/cross.svg"
-            class="profile__add-btn_cross"
+            class="profile__add-btn-cross"
             alt="add button"
           />New Post
         </button>
-      </header>
+      </section>
       <section class="cards">
         <ul class="cards__list">
           <li class="card">
             <img
               src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
-              alt=""
-              class="card_image"
+              alt="Val Thorens"
+              class="card__image"
             />
             <div class="card__content">
-              <p class="card__description">Val Thorens</p>
+              <h2 class="card__description">Val Thorens</h2>
               <button type="button" class="card__like-btn"></button>
             </div>
           </li>
           <li class="card">
             <img
               src="./images/2-photo-by-ceiline-from-pexels.jpg"
-              alt=""
-              class="card_image"
+              alt="Restaurant terrace"
+              class="card__image"
             />
             <div class="card__content">
-              <p class="card__description">Restaurant terrace</p>
+              <h2 class="card__description">Restaurant terrace</h2>
               <button type="button" class="card__like-btn"></button>
             </div>
           </li>
           <li class="card">
             <img
               src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
-              alt=""
-              class="card_image"
+              alt="An outdoor cafe"
+              class="card__image"
             />
             <div class="card__content">
-              <p class="card__description">An outdoor cafe</p>
+              <h2 class="card__description">An outdoor cafe</h2>
               <button type="button" class="card__like-btn"></button>
             </div>
           </li>
           <li class="card">
             <img
               src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-              alt=""
-              class="card_image"
+              alt="A very long bridge, over the forest..."
+              class="card__image"
             />
             <div class="card__content">
-              <p class="card__description">
+              <h2 class="card__description">
                 A very long bridge, over the forest...
-              </p>
+              </h2>
 
               <button type="button" class="card__like-btn"></button>
             </div>
@@ -90,28 +94,30 @@
           <li class="card">
             <img
               src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
-              alt=""
-              class="card_image"
+              alt="Tunnel with morning light"
+              class="card__image"
             />
             <div class="card__content">
-              <p class="card__description">Tunnel with morning light</p>
+              <h2 class="card__description">Tunnel with morning light</h2>
               <button type="button" class="card__like-btn"></button>
             </div>
           </li>
           <li class="card">
             <img
               src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
-              alt=""
-              class="card_image"
+              alt="Mountain house"
+              class="card__image"
             />
             <div class="card__content">
-              <p class="card__description">Mountain house</p>
+              <h2 class="card__description">Mountain house</h2>
               <button type="button" class="card__like-btn"></button>
             </div>
           </li>
         </ul>
       </section>
-      <footer class="footer page__centering"><h3 class="footer__text">2024 © Spots</h3></footer>
+      <footer class="footer page__centering">
+        <h3 class="footer__text">2024 © Spots</h3>
+      </footer>
     </div>
   </body>
 </html>
