--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <div class="page">
       <main class="content">
-        <section class="profile">
+        <section class="profile page__section">
           <img
             src="./images/avatar.jpg"
             alt="Bessie Coleman image"
@@ -42,8 +42,8 @@
             />New Post
           </button>
         </section>
-        <section class="cards">
-          <ul class="cards__list">
+        <section class="cards page__section">
+          <ul class="cards__list page__section">
             <li class="card">
               <img
                 src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
@@ -116,7 +116,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer page__centering">
+      <footer class="footer page__section">
         <h3 class="footer__text">2024 © Spots</h3>
       </footer>
     </div>
