--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Spots</title>
   </head>
   <body>
+
     <header class="header">
       <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
     </header>
@@ -120,5 +121,7 @@
         <h3 class="footer__text">2024 © Spots</h3>
       </footer>
     </div>
+
+    <script defer src="./scripts/index.js"></script>
   </body>
 </html>
