--- a/index.html
+++ b/index.html
@@ -120,8 +120,22 @@
       <footer class="footer page__section">
         <h3 class="footer__text">2024 © Spots</h3>
       </footer>
+      <div class="modal modal__opened">
+        <div class="modal__container">
+          <button type="submit" class="modal__close-btn"></button>
+          <h2 class="modal__title">Edit profile</h2>
+          <form class="modal__form" name="edit-profile">
+            <label for="name" class="modal__label">Name
+              <input id="name" type="text" class="modal__input">
+            </label>
+            <label for="description" class="modal__label">Description
+              <input id="description" type="text" class="modal__input">
+            </label>
+            <button type="submit" class="modal__submit-btn"></button>
+          </form>
+        </div>
+      </div>
     </div>
-
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
