--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form" name="edit-profile">
             <label for="name" class="modal__label">Name
-              <input id="name" type="text" class="modal__input">
+              <input id="name" type="text" class="modal__input" placeholder="Type your name">
             </label>
             <label for="description" class="modal__label">Description
-              <input id="description" type="text" class="modal__input">
+              <input id="description" type="text" class="modal__input" placeholder="Describe yourself">
             </label>
-            <button type="submit" class="modal__submit-btn"></button>
+            <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
       </div>
