--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Spots</title>
   </head>
   <body>
-
     <header class="header">
       <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
     </header>
@@ -125,11 +124,23 @@
           <button type="submit" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form" name="edit-profile">
-            <label for="name" class="modal__label">Name
-              <input id="name" type="text" class="modal__input" placeholder="Type your name">
+            <label for="name" class="modal__label"
+              >Name
+              <input
+                id="name"
+                type="text"
+                class="modal__input"
+                placeholder="Type your name"
+              />
             </label>
-            <label for="description" class="modal__label">Description
-              <input id="description" type="text" class="modal__input" placeholder="Describe yourself">
+            <label for="description" class="modal__label"
+              >Description
+              <input
+                id="description"
+                type="text"
+                class="modal__input"
+                placeholder="Describe yourself"
+              />
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
