--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <footer class="footer page__section">
         <h3 class="footer__text">2024 © Spots</h3>
       </footer>
-      <div class="modal modal__opened">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="submit" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
