--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </footer>
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
-          <button type="submit" class="modal__close-btn"></button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form" name="edit-profile">
             <label for="profile-name-input" class="modal__label"
