--- a/index.html
+++ b/index.html
@@ -85,6 +85,34 @@
           </form>
         </div>
       </div>
+
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__title">New post</h2>
+          <form class="modal__form" name="add-card">
+            <label for="add-card-link-input" class="modal__label"
+              >Image link
+              <input
+                id="add-card-link-input"
+                type="url"
+                class="modal__input"
+                placeholder="Paste the link in the picture"
+              />
+            </label>
+            <label for="add-card-name-input" class="modal__label"
+              >Caption
+              <input
+                id="add-card-name-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
