--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <template id="card-template">
               <li class="card">
                 <img src="" alt="" class="card__image" />
+                <button class="card__trash-button"
+                type="button"></button>
                 <div class="card__content">
                   <h2 class="card__description"></h2>
                   <button type="button" class="card__like-btn"></button>
