--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             <template id="card-template">
               <li class="card">
                 <img src="" alt="" class="card__image" />
-                <button class="card__trash-button"
-                type="button"></button>
+                <button class="card__trash-button" type="button"></button>
                 <div class="card__content">
                   <h2 class="card__description"></h2>
                   <button type="button" class="card__like-btn"></button>
@@ -114,6 +113,16 @@
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
+      </div>
+    </div>
+    <div class="modal modal_opened" id="preview-modal">
+      <div class="modal__content">
+        <button
+          class="modal__close-button modal__close-button_type_preview"
+          type="button"
+        ></button>
+        <img class="modal__image" src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/2-photo-by-ceiline-from-pexels.jpg" alt="" />
+        <p class="modal__caption"></p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
