--- a/index.html
+++ b/index.html
@@ -116,13 +116,17 @@
       </div>
     </div>
     <div class="modal modal_opened" id="preview-modal">
-      <div class="modal__content">
+      <div class="modal__content modal__content_type_preview">
         <button
-          class="modal__close-button modal__close-button_type_preview"
+          class="modal__close-btn modal__close-btn_type_preview"
           type="button"
         ></button>
-        <img class="modal__image" src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/2-photo-by-ceiline-from-pexels.jpg" alt="" />
-        <p class="modal__caption"></p>
+        <img
+          class="modal__image"
+          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/2-photo-by-ceiline-from-pexels.jpg"
+          alt=""
+        />
+        <p class="modal__caption">mrpwpgkrw</p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
