finsh .js open/close image modal

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
       </div>
     </div>
-    <div class="modal modal_opened" id="preview-modal">
+    <div class="modal " id="preview-modal">
       <div class="modal__content modal__content_type_preview">
         <button
           class="modal__close-btn modal__close-btn_type_preview"
@@ -123,10 +123,10 @@
         ></button>
         <img
           class="modal__image"
-          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/2-photo-by-ceiline-from-pexels.jpg"
+          src=""
           alt=""
         />
-        <p class="modal__caption">mrpwpgkrw</p>
+        <p class="modal__caption"></p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
