--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 minlength="2"
                 maxlength="40"
                 required
-              /> <span class="modal__error">Error!!</span>
+              /> <span class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label"
               >Description
@@ -86,7 +86,7 @@
                 minlength="2"
                 maxlength="200"
                 required
-              /> <span class="modal__error">Error!!</span>
+              /> <span class="modal__error"></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -106,7 +106,7 @@
                 class="modal__input"
                 placeholder="Paste the link in the picture"
                 required
-              /> <span class="modal__error">Error!!</span>
+              /> <span class="modal__error"></span>
             </label>
             <label for="add-card-name-input" class="modal__label"
               >Caption
@@ -118,7 +118,7 @@
                 minlength="2"
                 maxlength="30"
                 required
-              /> <span class="modal__error">Error!!</span>
+              /> <span class="modal__error"></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -139,6 +139,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
+    <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
