--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
-          <form class="modal__form" name="edit-profile">
+          <form class="modal__form" name="edit-profile" novalidate>
             <label for="profile-name-input" class="modal__label"
               >Name
               <input
@@ -97,7 +97,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
-          <form class="modal__form" name="add-card">
+          <form class="modal__form" name="add-card" novalidate>
             <label for="add-card-link-input" class="modal__label"
               >Image link
               <input
