rewrite image code

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,17 @@
   </head>
   <body>
     <header class="header">
-      <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
+      <img
+        src="<%=require('./images/logo.svg')%>"
+        alt="Spot logo"
+        class="header__logo"
+      />
     </header>
     <div class="page">
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/avatar.jpg"
+            src="<%=require('./images/avatar.jpg')%>"
             alt="Bessie Coleman image"
             class="profile__avatar"
           />
@@ -28,7 +32,7 @@
 
             <button type="button" class="profile__edit-btn">
               <img
-                src="./images/pencil.svg"
+                src="<%=require('./images/pencil.svg')%>"
                 class="profile__edit-btn-icon"
                 alt="pencil icon"
               />Edit Profile
@@ -36,7 +40,7 @@
           </div>
           <button type="button" class="profile__add-btn">
             <img
-              src="./images/cross.svg"
+              src="<%=require('./images/cross.svg')%>"
               class="profile__add-btn-cross"
               alt="add button"
             />New Post
